update root scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Kene's Portfolio Website with React Frontend and Express Backend",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "cd server && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm start",
     "client": "cd client && npm start",
     "install-server": "cd server && npm install",
@@ -12,7 +13,7 @@
     "install-all": "npm install && npm run install-server && npm run install-client",
     "build": "cd client && npm install @craco/craco && npm run build",
     "heroku-postbuild": "npm run install-client && npm run build",
-     "render-build": "npm run install-client && cd client && npm install @craco/craco && npm run build"
+    "render-build": "npm run install-client && cd client && npm install @craco/craco && npm run build"
   },
   "keywords": [
     "react",
